--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
   
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: 27.84% 33.33% 41.18%;
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
